force-app/main/default/objects/Opportunity/fields/Account_Final_Customer_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Final_Customer_Country__c</fullName>
    <label>Account Final Customer Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>