force-app/main/default/objects/Opportunity/fields/Account_Final_Customer_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Final_Customer_State__c</fullName>
    <label>Account Final Customer State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>