force-app/main/default/objects/Opportunity/fields/Account_Final_Customer_Street__c.field-meta.xml
<CustomField>
    <fullName>Account_Final_Customer_Street__c</fullName>
    <label>Account Final Customer Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>