force-app/main/default/objects/Opportunity/fields/Account_final_customer_type__c.field-meta.xml
<CustomField>
    <fullName>Account_final_customer_type__c</fullName>
    <formula>text(Account_Final_Customer__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account final customer type</label>
    <type>Text</type>
</CustomField>