force-app/main/default/objects/Opportunity/fields/Application_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Application_Engineer__c</fullName>
    <label>Application Engineer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alessio Properzi</fullName>
            </value>
            <value>
                <fullName>Andrea Lucchi</fullName>
            </value>
            <value>
                <fullName>Erica Masini</fullName>
            </value>
            <value>
                <fullName>Glib Stepanenko</fullName>
            </value>
            <value>
                <fullName>Ignazio Vizzini</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>