force-app/main/default/objects/Opportunity/fields/Application_for_this_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Application_for_this_opportunity__c</fullName>
    <label>Opportunity application</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generic Shafts</fullName>
            </value>
            <value>
                <fullName>Turned parts</fullName>
            </value>
            <value>
                <fullName>Micro-components</fullName>
            </value>
            <value>
                <fullName>Sintered parts</fullName>
            </value>
            <value>
                <fullName>Extruded parts</fullName>
            </value>
            <value>
                <fullName>Camshafts</fullName>
            </value>
            <value>
                <fullName>Crankshafts</fullName>
            </value>
            <value>
                <fullName>Electric engines</fullName>
            </value>
            <value>
                <fullName>Fuel pipes</fullName>
            </value>
            <value>
                <fullName>Splined and geared shafts</fullName>
            </value>
            <value>
                <fullName>Injectors</fullName>
            </value>
            <value>
                <fullName>CV joints and axles</fullName>
            </value>
            <value>
                <fullName>Pistons</fullName>
            </value>
            <value>
                <fullName>Shock absorbers</fullName>
            </value>
            <value>
                <fullName>Transmission shafts</fullName>
            </value>
            <value>
                <fullName>Turbine wheels</fullName>
            </value>
            <value>
                <fullName>Engine valves</fullName>
            </value>
            <value>
                <fullName>Bearings</fullName>
            </value>
            <value>
                <fullName>Bone prosthesis</fullName>
            </value>
            <value>
                <fullName>Bottles</fullName>
            </value>
            <value>
                <fullName>Bullets</fullName>
            </value>
            <value>
                <fullName>Cables</fullName>
            </value>
            <value>
                <fullName>Ceramic component</fullName>
            </value>
            <value>
                <fullName>Clamping systems</fullName>
            </value>
            <value>
                <fullName>Components for linear motion (bellows, guides, etc.)</fullName>
            </value>
            <value>
                <fullName>Connectors</fullName>
            </value>
            <value>
                <fullName>Cutting tools</fullName>
            </value>
            <value>
                <fullName>Dental plants</fullName>
            </value>
            <value>
                <fullName>Eccentric shafts</fullName>
            </value>
            <value>
                <fullName>Elastic couplings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>