force-app/main/default/objects/Opportunity/fields/Application_for_this_opportunity_text__c.field-meta.xml
<CustomField>
    <fullName>Application_for_this_opportunity_text__c</fullName>
    <description>describe here the application if not present in the list above</description>
    <inlineHelpText>describe here the application if not present in the list above</inlineHelpText>
    <label>Application for this opportunity (text)</label>
    <type>TextArea</type>
</CustomField>