force-app/main/default/objects/Opportunity/fields/Cart__c.field-meta.xml
<CustomField>
    <fullName>Cart__c</fullName>
    <label>Cart.</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>