force-app/main/default/objects/Opportunity/fields/close_lost_reason_detail__c.field-meta.xml
<CustomField>
    <fullName>close_lost_reason_detail__c</fullName>
    <label>close lost reason detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PRO__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Need bigger diameter</fullName>
            </value>
            <value>
                <fullName>Need bigger length</fullName>
            </value>
            <value>
                <fullName>Need higher weight</fullName>
            </value>
            <value>
                <fullName>Need more resolution</fullName>
            </value>
            <value>
                <fullName>Need touch probe mechanical improvements</fullName>
            </value>
            <value>
                <fullName>Need keyway slot symmetry</fullName>
            </value>
            <value>
                <fullName>Need more spline measurements</fullName>
            </value>
            <value>
                <fullName>Need camera tilting</fullName>
            </value>
            <value>
                <fullName>Need  other Z analysis</fullName>
            </value>
            <value>
                <fullName>Need 3D features</fullName>
            </value>
            <value>
                <fullName>Need rotary axis features improvements</fullName>
            </value>
            <value>
                <fullName>Need better accuracy/repeatability</fullName>
            </value>
            <value>
                <fullName>Need bigger field</fullName>
            </value>
            <value>
                <fullName>Need touch probe</fullName>
            </value>
            <value>
                <fullName>Need Z depth &gt; 50 mm</fullName>
            </value>
            <value>
                <fullName>Part weight &gt; 20kg</fullName>
            </value>
            <value>
                <fullName>Auto-programming</fullName>
            </value>
            <value>
                <fullName>Auto-programming (from 3D &amp; PDF)</fullName>
            </value>
            <value>
                <fullName>No machine modularity (for additional accessories)</fullName>
            </value>
            <value>
                <fullName>Competition Hommel</fullName>
            </value>
            <value>
                <fullName>Competition Sylvac</fullName>
            </value>
            <value>
                <fullName>Competition Marposs</fullName>
            </value>
            <value>
                <fullName>Competition Dr. Schneider</fullName>
            </value>
            <value>
                <fullName>Competition Mahr</fullName>
            </value>
            <value>
                <fullName>Competition Keyence</fullName>
            </value>
            <value>
                <fullName>Competition Mitutoyo</fullName>
            </value>
            <value>
                <fullName>Competition FOX</fullName>
            </value>
            <value>
                <fullName>Competition Chotest</fullName>
            </value>
            <value>
                <fullName>Competition Micro-vu</fullName>
            </value>
            <value>
                <fullName>Competition OGP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>