force-app/main/default/objects/Opportunity/fields/Competition_Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Competition_Closed_Lost_Reason__c</fullName>
    <label>Competition Closed/Lost Reason Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor Value Proposition demo</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>He has other machines from competition</fullName>
            </value>
            <value>
                <fullName>We were too late</fullName>
            </value>
            <value>
                <fullName>Measuring program migration too complex</fullName>
            </value>
            <value>
                <fullName>Other reasons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>