force-app/main/default/objects/Opportunity/fields/Competition_Closed_Lost_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Competition_Closed_Lost_Reason_Detail__c</fullName>
    <label>Competition Closed/Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PRO__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competition Hommel</fullName>
            </value>
            <value>
                <fullName>Competition Sylvac</fullName>
            </value>
            <value>
                <fullName>Competition Marposs</fullName>
            </value>
            <value>
                <fullName>Competition Dr. Schneider</fullName>
            </value>
            <value>
                <fullName>Competition Mahr</fullName>
            </value>
            <value>
                <fullName>Competition Keyence</fullName>
            </value>
            <value>
                <fullName>Competition Mitutoyo</fullName>
            </value>
            <value>
                <fullName>Competition FOX</fullName>
            </value>
            <value>
                <fullName>Competition Chotest</fullName>
            </value>
            <value>
                <fullName>Competition Micro-vu</fullName>
            </value>
            <value>
                <fullName>Competition OGP</fullName>
            </value>
            <value>
                <fullName>Other Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>