force-app/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hommel</fullName>
            </value>
            <value>
                <fullName>Tesa</fullName>
            </value>
            <value>
                <fullName>Mahr</fullName>
            </value>
            <value>
                <fullName>Mar Poss</fullName>
            </value>
            <value>
                <fullName>Dr.Sch.</fullName>
            </value>
            <value>
                <fullName>Altro</fullName>
            </value>
            <value>
                <fullName>Smart Vision</fullName>
            </value>
            <value>
                <fullName>Zeiss</fullName>
            </value>
            <value>
                <fullName>Sinowon</fullName>
            </value>
            <value>
                <fullName>Keyence</fullName>
            </value>
            <value>
                <fullName>LTF-Microtecnica</fullName>
            </value>
            <value>
                <fullName>QCM Series</fullName>
            </value>
            <value>
                <fullName>OGP</fullName>
            </value>
            <value>
                <fullName>Dr.Schneider</fullName>
            </value>
            <value>
                <fullName>Vision Eng.</fullName>
            </value>
            <value>
                <fullName>Ayonis</fullName>
            </value>
            <value>
                <fullName>Mitutoyo</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>