force-app/main/default/objects/Opportunity/fields/Confocal__c.field-meta.xml
<CustomField>
    <fullName>Confocal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confocal</label>
    <type>Checkbox</type>
</CustomField>