force-app/main/default/objects/Opportunity/fields/Confocal_VV_only__c.field-meta.xml
<CustomField>
    <fullName>Confocal_VV_only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confocal (VV only)</label>
    <type>Checkbox</type>
</CustomField>