force-app/main/default/objects/Opportunity/fields/Created_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Created_Quarter__c</fullName>
    <formula>&quot;Q&quot; &amp; 
TEXT(
  CEILING(MONTH(DATEVALUE(CreatedDate)) / 3)
)
&amp; &quot; &quot; &amp;
TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Quarter</label>
    <type>Text</type>
</CustomField>