force-app/main/default/objects/Opportunity/fields/DEMO__c.field-meta.xml
<CustomField>
    <fullName>DEMO__c</fullName>
    <label>DEMO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No demo required</fullName>
            </value>
            <value>
                <fullName>Demo by the reseller/branch</fullName>
            </value>
            <value>
                <fullName>Demo by VICI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>