force-app/main/default/objects/Opportunity/fields/Expected_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>Expected_delivery_date__c</fullName>
    <description>Please fill this field with the expected delivery date from RIMINI. This will be an indication for the production only. The real delivery date will be reported in the Order Confirmation (OC). In case of machines taken for your local stock, please use the date of the original shipping.</description>
    <inlineHelpText>Please fill this field with the expected delivery date from RIMINI. This will be an indication for the production only. The real delivery date will be reported in the Order Confirmation (OC). In case of machines taken for your local stock, please use the date of the original shipping.</inlineHelpText>
    <label>Expected delivery date</label>
    <type>Date</type>
</CustomField>