force-app/main/default/objects/Opportunity/fields/Final_Customer__c.field-meta.xml
<CustomField>
    <fullName>Final_Customer__c</fullName>
    <label>Final Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>