force-app/main/default/objects/Opportunity/fields/Final_Customer_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Final_Customer_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Final Customer)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>