force-app/main/default/objects/Opportunity/fields/Green_Light_internal__c.field-meta.xml
<CustomField>
    <fullName>Green_Light_internal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for close won opps.
No extra discount - No special requests
For internal use only</description>
    <inlineHelpText>Used for close won opps.
No extra discount - No special requests
For internal use only</inlineHelpText>
    <label>Green Light (internal)</label>
    <type>Checkbox</type>
</CustomField>