force-app/main/default/objects/Opportunity/fields/Historical_competition_customer__c.field-meta.xml
<CustomField>
    <fullName>Historical_competition_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if this customer use to buy from competition and never bought VICIVISION or Metrios</description>
    <label>Historical competition customer</label>
    <type>Checkbox</type>
</CustomField>