force-app/main/default/objects/Opportunity/fields/Historical_VICI_METRIOS_customer__c.field-meta.xml
<CustomField>
    <fullName>Historical_VICI_METRIOS_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the customer already purchased a VICIVISION or a Metrios</description>
    <label>Existing VICI/METRIOS customer</label>
    <type>Checkbox</type>
</CustomField>