force-app/main/default/objects/Opportunity/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Ceramic Manufacturing</fullName>
            </value>
            <value>
                <fullName>Defense</fullName>
            </value>
            <value>
                <fullName>Electrics and Derivatives</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Fixtures &amp; Clamping Systems</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Glass Manufacturing</fullName>
            </value>
            <value>
                <fullName>Hydraulics, Pneumatics, Oleodynamic</fullName>
            </value>
            <value>
                <fullName>Jewelry &amp; Fashion</fullName>
            </value>
            <value>
                <fullName>Medical – Dental Manufacturing</fullName>
            </value>
            <value>
                <fullName>Metalworking &amp; Manufacturing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Pharma</fullName>
            </value>
            <value>
                <fullName>Potential Dealer/Agent</fullName>
            </value>
            <value>
                <fullName>Rubber &amp; Plastics</fullName>
            </value>
            <value>
                <fullName>School/Institute/University</fullName>
            </value>
            <value>
                <fullName>Watchmaking</fullName>
            </value>
            <value>
                <fullName>Robots and system integrators</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>