force-app/main/default/objects/Opportunity/fields/Inspection_Automation_Type__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Automation_Type__c</fullName>
    <label>Inspection/Automation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dimensional inspection</fullName>
            </value>
            <value>
                <fullName>Surface inspection</fullName>
            </value>
            <value>
                <fullName>Surface + Dimensional inspection</fullName>
            </value>
            <value>
                <fullName>Palletizer</fullName>
            </value>
            <value>
                <fullName>Sorting</fullName>
            </value>
            <value>
                <fullName>Sorting + Packaging</fullName>
            </value>
            <value>
                <fullName>Traceability</fullName>
            </value>
            <value>
                <fullName>Surface + Dimensional + Other inspection</fullName>
            </value>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>Loading/Unloading</fullName>
            </value>
            <value>
                <fullName>Electrical cabinet and systems</fullName>
            </value>
            <value>
                <fullName>Tightening torque</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>