force-app/main/default/objects/Opportunity/fields/Internal_Vici_offer_nr__c.field-meta.xml
<CustomField>
    <fullName>Internal_Vici_offer_nr__c</fullName>
    <description>Please fill this field to track Vici&amp;C spa offer documents (if present)
Compilare questo campo per tracciare le offerte dirette vici (se presenti)</description>
    <inlineHelpText>Please fill this field to track Vici&amp;C spa offer documents (if present)
Compilare questo campo per tracciare le offerte dirette vici (se presenti)</inlineHelpText>
    <label>Internal Vici offer nr.</label>
    <type>TextArea</type>
</CustomField>