force-app/main/default/objects/Opportunity/fields/isPortal__c.field-meta.xml
<CustomField>
    <fullName>isPortal__c</fullName>
    <formula>IF( MONTH(TODAY())&gt;2 , 
IF( YEAR(CloseDate)=YEAR(TODAY()) || YEAR(CloseDate)=YEAR(TODAY())+1 , true, false) , 
IF( YEAR(CloseDate ) &gt;= YEAR(TODAY())-1, true, false) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isPortal</label>
    <type>Checkbox</type>
</CustomField>