force-app/main/default/objects/Opportunity/fields/Machine_Features_Closed_Lost_Reason_Deta__c.field-meta.xml
<CustomField>
    <fullName>Machine_Features_Closed_Lost_Reason_Deta__c</fullName>
    <label>Machine Features Closed/Lost Reason Deta</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PRO__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Need bigger diameter</fullName>
            </value>
            <value>
                <fullName>Need bigger length</fullName>
            </value>
            <value>
                <fullName>Need higher weight</fullName>
            </value>
            <value>
                <fullName>Need more resolution</fullName>
            </value>
            <value>
                <fullName>Need touch probe mechanical improvements</fullName>
            </value>
            <value>
                <fullName>Need keyway slot symmetry</fullName>
            </value>
            <value>
                <fullName>Need more spline measurements</fullName>
            </value>
            <value>
                <fullName>Need camera tilting</fullName>
            </value>
            <value>
                <fullName>Need other Z analysis</fullName>
            </value>
            <value>
                <fullName>Need 3D features</fullName>
            </value>
            <value>
                <fullName>Need rotary axis features improvements</fullName>
            </value>
            <value>
                <fullName>Need better accuracy/repeatability</fullName>
            </value>
            <value>
                <fullName>Need bigger field</fullName>
            </value>
            <value>
                <fullName>Need touch probe</fullName>
            </value>
            <value>
                <fullName>Need Z depth &gt; 50 mm</fullName>
            </value>
            <value>
                <fullName>Part weight &gt; 20kg</fullName>
            </value>
            <value>
                <fullName>Auto-programming</fullName>
            </value>
            <value>
                <fullName>Auto-programming (from 3D &amp; PDF)</fullName>
            </value>
            <value>
                <fullName>No machine modularity (for additional accessories)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>