force-app/main/default/objects/Opportunity/fields/machine_from_local_inventory__c.field-meta.xml
<CustomField>
    <fullName>machine_from_local_inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox must be flagged by distributors and subsidiaries to indicate that this opportunity will use a machine already bought - Do not use this flag for machines on loan from Rimini</description>
    <inlineHelpText>This checkbox must be flagged by distributors and subsidiaries to indicate that this opportunity will use a machine already bought - Do not use this flag for machines on loan from Rimini</inlineHelpText>
    <label>Machine from local inventory</label>
    <type>Checkbox</type>
</CustomField>