force-app/main/default/objects/Opportunity/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>CASE(
    MONTH(DATEVALUE(CreatedDate)),
    1, &quot;Gennaio&quot;,
    2, &quot;Febbraio&quot;,
    3, &quot;Marzo&quot;,
    4, &quot;Aprile&quot;,
    5, &quot;Maggio&quot;,
    6, &quot;Giugno&quot;,
    7, &quot;Luglio&quot;,
    8, &quot;Agosto&quot;,
    9, &quot;Settembre&quot;,
    10, &quot;Ottobre&quot;,
    11, &quot;Novembre&quot;,
    12, &quot;Dicembre&quot;,
    &quot;Altro&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <type>Text</type>
</CustomField>