force-app/main/default/objects/Opportunity/fields/Motivo_chiusa_persa__c.field-meta.xml
<CustomField>
    <fullName>Motivo_chiusa_persa__c</fullName>
    <label>Close lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bad connection of our distributing partner</fullName>
            </value>
            <value>
                <fullName>Bad previous experience with VICI</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Dead - no decision</fullName>
            </value>
            <value>
                <fullName>Machine features</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>