force-app/main/default/objects/Opportunity/fields/Net_Amount_to_vici__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_to_vici__c</fullName>
    <description>Please fill the field with the expected net amount to vici. a rough number is enough</description>
    <inlineHelpText>Please fill the field with the expected net amount to vici. a rough number is enough</inlineHelpText>
    <label>Net Amount to vici</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>